--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=/home/qwerty/.netbeans/8.0.1/build.properties
+file.reference.KGradientPanel.jar=/home/filipe/Desktop/LP2/Sistema-Restaurante-LP2/lib/KGradientPanel.jar
+user.properties.file=/home/filipe/.netbeans/8.2/build.properties
