--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/Screen_Restaurant.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.KGradientPanel.jar=/home/qwerty/Documents/KGradientPanel-master/dist/KGradientPanel.jar
+file.reference.mysql-connector-java-8.0.19.jar=/home/qwerty/Downloads/mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.KGradientPanel.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
