--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
-file.reference.KGradientPanel.jar=/home/dcet1-lami11-ubuntu/\u00c1rea de Trabalho/LP2/Sistema-Restaurante-LP2/lib/KGradientPanel.jar
-file.reference.mysql-connector-java-8.0.19.jar=/home/dcet1-lami11-ubuntu/\u00c1rea de Trabalho/LP2/Sistema-Restaurante-LP2/lib/mysql-connector-java-8.0.19.jar
-user.properties.file=/home/dcet1-lami11-ubuntu/.netbeans/8.2/build.properties
+file.reference.KGradientPanel.jar=C:\\Users\\Marizane\\Desktop\\LP2\\Sistema-Restaurante-LP2\\lib\\KGradientPanel.jar
+file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\Marizane\\Desktop\\LP2\\Sistema-Restaurante-LP2\\lib\\mysql-connector-java-8.0.19.jar
+user.properties.file=C:\\Users\\Marizane\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
